; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_xgene-hwmon.c_xgene_hwmon_get_io_pwr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_xgene-hwmon.c_xgene_hwmon_get_io_pwr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgene_hwmon_dev = type { i32 }

@SOC_PWR_REG = common dso_local global i32 0, align 4
@SOC_PWR_MW_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xgene_hwmon_dev*, i64*)* @xgene_hwmon_get_io_pwr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xgene_hwmon_get_io_pwr(%struct.xgene_hwmon_dev* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xgene_hwmon_dev*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.xgene_hwmon_dev* %0, %struct.xgene_hwmon_dev** %4, align 8
  store i64* %1, i64** %5, align 8
  %9 = load %struct.xgene_hwmon_dev*, %struct.xgene_hwmon_dev** %4, align 8
  %10 = load i32, i32* @SOC_PWR_REG, align 4
  %11 = call i32 @xgene_hwmon_reg_map_rd(%struct.xgene_hwmon_dev* %9, i32 %10, i64* %6)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* %3, align 4
  br label %30

16:                                               ; preds = %2
  %17 = load %struct.xgene_hwmon_dev*, %struct.xgene_hwmon_dev** %4, align 8
  %18 = load i32, i32* @SOC_PWR_MW_REG, align 4
  %19 = call i32 @xgene_hwmon_reg_map_rd(%struct.xgene_hwmon_dev* %17, i32 %18, i64* %7)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %3, align 4
  br label %30

24:                                               ; preds = %16
  %25 = load i64, i64* %6, align 8
  %26 = call i64 @WATT_TO_mWATT(i64 %25)
  %27 = load i64, i64* %7, align 8
  %28 = add nsw i64 %26, %27
  %29 = load i64*, i64** %5, align 8
  store i64 %28, i64* %29, align 8
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %24, %22, %14
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @xgene_hwmon_reg_map_rd(%struct.xgene_hwmon_dev*, i32, i64*) #1

declare dso_local i64 @WATT_TO_mWATT(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
